Fixed the overflow problem

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,3 +1,17 @@
-@media screen {
+/* Navigation */
+
+@media only screen and (max-width:1023px) {
     
+    #section-home{
+        background-image: url('images/background.jpg');
+        background-position: bottom center;
+        background-attachment: fixed;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 100vh;
+        width:100vw;  
+    }
+    .hamburger{
+        visibility: visible;
+    }
 }
