--- a/style.css
+++ b/style.css
@@ -1,146 +1,173 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins",sans-serif;
+  overflow-x: hidden;
 }
-#section-home{
-    background-image: url('images/background.jpg');
-    background-position:  center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width:100%; 
-}
+
 #navbar{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 4rem;
-    width:85%;
-    margin:0 auto;
-    color: rgb(5, 5, 94);
-    font-family: "Poppins",sans-serif;
+    height:4rem;
+
+}
+
+.hamburger{
+    color: red;
+    visibility: hidden;
     
 }
-
-#navbar #logo{
-    font-weight: 500;
-    font-size: 40px;
-}
-
-#navbar #logo span{
-    color:#EB8317;
-}
-
-.menu-icons{
-    
-    display:flex;
-    gap:6rem;
-    font-size: 20px;
+#navbar h1{
+    margin-left: 10rem;
     font-weight: 300;
-}
+    font-size: xx-large;
 
+}
+.menu-icons{
+    display:flex;
+    
+}
 .menu-icons li{
-    list-style: none;
+    list-style-type: none;
 }
-
 .menu-icons li a{
     text-decoration: none;
-    color:rgb(5, 5, 94);
-}
-
-.menu-icons li a:hover{
-    color: #EB8317;
-    text-decoration: underline;
+    margin-right: 6rem;
+    color:black;
 }
 
 
-.profile{
-    max-height: fit-content;
-    display: flex;
-    gap:10rem;
-    margin-top: 15vh;;
 
-}
+#section-home {
+  background-image: url("images/background.jpg");
+  background-position: bottom center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 92vh;
+  
+ }
+#navbar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 8vh;
 
-.pic{
-    flex:1;
-    display: flex;
-    justify-content: flex-end;
-    
-}
-
-.pic img{
-    
-    width:450px;
-    height: 450px;
-    border-radius: 50%;
-    border: 5px solid #EB8317;
-    object-fit: cover;
-   
-    
-}
-.intro{
-    flex:1;
-    text-align: left;
-    font-family: "Poppins",sans-serif;
-    font-size: 20px;
-    color:rgb(5, 5, 94) ;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    
+  width: 100vw;
+  color: rgb(5, 5, 94);
+  font-family: "Poppins", sans-serif;
+  background-color: #eb8317;
 }
 
-.intro h1 span{
-    color:#EB8317;
+#navbar #logo {
+  font-weight: 500;
+  font-size: 40px;
 }
 
-.intro p{
-    max-width: 70%;
-    padding-top: 15px;
-    color: #F4EDD3;
-    
+#navbar #logo span {
+  color: #eb8317;
 }
 
-#section-photos{
-    background: rgb(5, 5, 94) ;
-    width: 100%;
-    height: 100vh;
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-}
-.title{
-    text-align: center;
-    color:#EB8317;
-
-}
-.title div{
-    width:30%;
-    height: 2px;
-    background-color: aliceblue;
-    margin: 2px 0;
-    text-align: center;
+.menu-icons {
+  display: flex;
+  gap: 6rem;
+  font-size: 20px;
+  font-weight: 300;
 }
 
-.img{
-    height: 280px;
-    width: 400px;
-    border-radius: 5px;
+.menu-icons li {
+  list-style: none;
 }
 
-.image-grid{
-    width:80%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    row-gap:6rem ;
-    column-gap: 4rem;
-    justify-items: center;
+.menu-icons li a {
+  text-decoration: none;
+  color: rgb(5, 5, 94);
 }
 
+.menu-icons li a:hover {
+  color: #eb8317;
+  text-decoration: underline;
+}
+
+.profile {
+  max-height: fit-content;
+  display: flex;
+  gap: 10rem;
+  /* margin-top: 15vh; */
+}
+
+.pic {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.pic img {
+  width: 450px;
+  height: 450px;
+  border-radius: 50%;
+  border: 5px solid #eb8317;
+  object-fit: cover;
+}
+.intro {
+  flex: 1;
+  text-align: left;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  color: rgb(5, 5, 94);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.intro h1 span {
+  color: #eb8317;
+}
+
+.intro p {
+  max-width: 70%;
+  padding-top: 15px;
+  color: #f4edd3;
+}
+/*
+
+#section-photos {
+  background: rgb(5, 5, 94);
+  width: 100%;
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.title {
+  text-align: center;
+  color: #eb8317;
+}
+.title div {
+  width: 30%;
+  height: 2px;
+  background-color: aliceblue;
+  margin: 2px 0;
+  text-align: center;
+}
+
+.img {
+  height: 280px;
+  width: 400px;
+  border-radius: 5px;
+}
+
+.image-grid {
+  width: 80%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 6rem;
+  column-gap: 4rem;
+  justify-items: center;
+} */
